--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ title: Scott Dixon
 email: dixon.scottr@gmail.com
 url: http://dixonscottr.github.io/
 description: "Full-stack web developer | former journalist"
+repository: dixonscottr/dixonscottr.github.io
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
@@ -24,3 +25,9 @@ social:
 # Build settings
 markdown: kramdown
 permalink: pretty
+
+collections:
+  projects:
+    output: true
+    permalink: /projects/:path/
+    title: projects
