--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Scott Dixon
 email: dixon.scottr@gmail.com
 url: http://dixonscottr.github.io/
-description: "Full-stack web developer | former journalist"
+description: "full-stack web developer | former journalist"
 repository: dixonscottr/dixonscottr.github.io
 
 # Color settings (hex-codes without the leading hash-tag)
